# projeto-bootcamp-luizalabs

./: README.md  criar_tabelas.py  main.py  pyproject.toml
api/v1/: api.py
api/v1/endpoints/: auth.py  transacao.py  usuario.py
core/: auth.py  configs.py  database.py  deps.py  security.py
models/: __all_models.py  conta_model.py  transacoes_model.py  usuario_model.py
schemas/: conta_schema.py  transacao_schema.py  usuario_schema.py
services/: transaction_service.py  user_service.py
